samples/_failures_safe/1761544206_bffff6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_815b0437.c: In function ‘run_state_machine’:
./samples/SAFE/__tmp_815b0437.c:179:17: error: expected expression at end of input
  179 |                 current_state = handle_reading_number(ev, c,
      |                 ^~~~~~~~~~~~~
./samples/SAFE/__tmp_815b0437.c:179:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_815b0437.c:179:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_815b0437.c:179:17: error: expected declaration or statement at end of input
